# embedm

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  embedm-config.yaml  plugin_test_report.json  pyproject.toml  readme.md
.github/workflows/: create_release.yaml  pr_check.yaml  publish_pypi.yaml
archive/iteration_1/doc/: planned-and-open-issues.md
archive/iteration_1/scripts/: update_regression_snapshots.py
archive/iteration_1/tests/: test_config.py  test_file_plugin.py  test_file_plugin_comprehensive.py  test_layout_toc_plugins.py  test_mermaid_plugin.py  test_phases.py  test_registry.py  test_symbols.py
doc/: architecture.md  functional-analysis.md  planned-and-open-issues.md
doc/examples/src/: Hello.cs  SymbolTest.cs  embed_comment_example.md  embed_csv.md  embed_csv_table.md  embed_file.md  embed_json_table.md  embed_layout.md  embed_layout_with_toc.md  embed_line_number_styles.md  embed_lines.md  embed_loops.md  embed_nested_layout.md  embed_region.md  embed_symbol.md  embed_toc.md  embedm_config.yaml  full_example.md  hello_py.py  loop.md  lorem-ipsum.md  python.md  ref.md  sample_code.py  table.json  test.csv
doc/manual/: plugins_embedded.compiled.md
doc/manual/compiled/: README.md  architecture.md  cli.md  configuration.md  example_snippet.md  file_plugin.md  query_path_plugin.md  readme.md  recall_plugin.md  synopsis_plugin.md  table_plugin.md  toc_plugin.md
doc/manual/data/: builtin_plugins.json
doc/manual/examples/: config_all.yaml  config_selective.yaml
doc/manual/src/: README.md  adding_languages.md  architecture.md  cli.md  configuration.md  embed_file.md  embed_layout.md  embed_symbols.compiled.md  embed_symbols.md  embed_tables.md  embed_toc.md  embedm-config.yaml  embedm_config.yaml  example_data.xml  example_data.yaml  file_plugin.md  plugin_tutorial.md  plugins.md  plugins_embedded.md  query_path_plugin.md  readme.md  recall_plugin.md  synopsis_plugin.md  table_plugin.md  toc_plugin.md
doc/project/: agent_context.md  agent_context.src.md  backlog.md  claude_src.md  commands.md  devlog.md  embedm-config.yaml  error-handling.md  features.md  guidelines.md  prompts.md  working_title.md
doc/project/agent_management/: claude_review_questions.md
doc/project/claude-dialogs/: on_recall_dog_food.md
doc/readme/compiled/: readme.md
doc/readme/src/: readme.md
docs/: plugin_example.py
examples/: c1-2.md  root.md
scripts/: check_coverage.py  create_release.py  update_regression_snapshots.py
src/: embedm.py
src/embedm/: __init__.py  __main__.py  cli.py  config.py  converters.py  discovery.py  extraction.py  formatting.py  layout.py  models.py  parsing.py  phases.py  plugin.py  processors.py  registry.py  resolver.py  sandbox.py  symbols.py  validation.py
src/embedm/application/: ansi.py  application_events.py  application_resources.py  cli.py  compiler.py  config_loader.py  configuration.py  console.py  embedm_context.py  interactive_renderer.py  legacy_renderer.py  orchestration.py  output_util.py  plan_tree.py  planner.py  plugin_diagnostics.py  renderer.py  stream_renderer.py  verification.py
src/embedm/domain/: directive.py  document.py  domain_resources.py  plan_node.py  span.py  status_level.py
src/embedm/infrastructure/: cache_events.py  events.py  file_cache.py  file_util.py  infrastructure_resources.py
src/embedm/io/: file_cache.py
src/embedm/parsing/: comment_filter.py  directive_parser.py  extraction.py  parsing_resources.py  symbol_parser.py
src/embedm/plugins/: api.py  directive_options.py  normalization_base.py  plugin_base.py  plugin_configuration.py  plugin_context.py  plugin_events.py  plugin_registry.py  plugin_resources.py  transformer_base.py  validation_base.py
src/embedm/styles/: minimal.css
src/embedm_plugins/: __init__.py  comment_plugin.py  embedm_file_plugin.py  embedm_file_transformer.py  file_plugin.py  file_transformer.py  hello_world_plugin.py  hello_world_transformer.py  layout_plugin.py  normalize_json.py  normalize_toml.py  plugin_resources.py  query_path_engine.py  query_path_normalize_yaml.py  query_path_plugin.py  query_path_transformer.py  recall_plugin.py  recall_transformer.py  region_transformer.py  synopsis_plugin.py  synopsis_transformer.py  table_plugin.py  table_transformer.py  table_validation.py  text_processing.py  toc_plugin.py  toc_resources.py  toc_transformer.py
src/embedm_plugins/file/: comment_filter_transformer.py  file_resources.py  file_transformer.py  line_transformer.py  region_transformer.py  symbol_transformer.py
src/embedm_plugins/query_path/: query_path_engine.py  query_path_normalize_xml.py  query_path_resources.py  query_path_transformer.py
src/embedm_plugins/recall/: recall_resources.py  recall_transformer.py
src/embedm_plugins/synopsis/: synopsis_resources.py  synopsis_stopwords.py  synopsis_transformer.py  text_processing.py
src/embedm_plugins/table/: table_resources.py  table_transformer.py  table_validation.py
src/embedm_plugins/toc/: toc_transformer.py
tests/: test_config.py  test_embedm.py  test_file_plugin.py  test_file_plugin_comprehensive.py  test_layout_toc_plugins.py  test_limits.py  test_phases.py  test_plugin_interface.py  test_registry.py  test_regression.py  test_sandbox.py  test_symbols.py
tests/ebedm/: plugin_registry_test.py
tests/ebedm/application/: cli_test.py  config_loader_test.py  console_test.py  (+6 more)
tests/embedm_plugins/: embedm_file_plugin_test.py  file_plugin_test.py  hello_world_plugin_test.py  line_transformer_test.py  normalize_json_test.py  normalize_toml_test.py  normalize_xml_test.py  normalize_yaml_test.py  query_path_engine_test.py  query_path_plugin_test.py  query_path_transformer_test.py  recall_plugin_test.py  recall_transformer_test.py  region_transformer_test.py  symbol_transformer_test.py  synopsis_plugin_test.py  synopsis_transformer_test.py  table_plugin_test.py  table_transformer_test.py  table_validation_test.py  text_processing_test.py  toc_plugin_test.py  toc_transformer_test.py
tests/integration/: pipeline_test.py
tests/regression/: README.md  test_regression.py
(+282 files in other folders)
