[project]
name = "embedm"
version = "0.4.0"
description = "A Python tool for embedding files, code snippets, and generating tables of contents in Markdown documents with built-in safety limits and validation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fultslop"}
]
keywords = ["markdown", "embedding", "documentation", "code-snippets", "table-of-contents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Fultslop/embedm"
Repository = "https://github.com/Fultslop/embedm"
Issues = "https://github.com/Fultslop/embedm/issues"

[project.scripts]
embedm = "embedm.cli:main"

# md.start:entry_points
[project.entry-points."embedm.plugins"]
file = "embedm_plugins.file_plugin:FilePlugin"
layout = "embedm_plugins.layout_plugin:LayoutPlugin"
toc = "embedm_plugins.toc_plugin:TOCPlugin"
table = "embedm_plugins.table_plugin:TablePlugin"
mermaid = "embedm_plugins.mermaid_plugin:MermaidPlugin"
# md.end:entry_points

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "--verbose",
    "--color=yes",
    "--cov=embedm",
    "--cov=embedm_plugins",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=json",
]

[tool.coverage.run]
source = ["embedm"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


# -------------------
# RUFF
# -------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",
    "I",   # import sorting
    "B",   # bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "ARG", # unused args
    "SIM", # simplifications
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------
# MYPY
# -------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
exclude = ["tests/"]
