[project]
name = "embedm"
version = "0.6.1"
description = "A Python tool for embedding files, code snippets, and generating tables of contents in Markdown documents with built-in safety limits and validation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fultslop"}
]
keywords = ["markdown", "embedding", "documentation", "code-snippets", "table-of-contents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Fultslop/embedm"
Repository = "https://github.com/Fultslop/embedm"
Issues = "https://github.com/Fultslop/embedm/issues"

[project.scripts]
embedm = "embedm.application.orchestration:main"

# md.start:entry_points
[project.entry-points."embedm.plugins"]
embedm_file = "embedm_plugins.file_plugin:FilePlugin"
table_of_contents = "embedm_plugins.toc_plugin:ToCPlugin"
hello_world = "embedm_plugins.hello_world_plugin:HelloWorldPlugin"
table = "embedm_plugins.table_plugin:TablePlugin"
synopsis = "embedm_plugins.synopsis_plugin:SynopsisPlugin"
recall = "embedm_plugins.recall_plugin:RecallPlugin"
query_path = "embedm_plugins.query_path_plugin:QueryPathPlugin"
# md.end:entry_points

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["archive", ".*", "dist", "build"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*", "*_test"]

addopts = [
    "--verbose",
    "--color=yes",
    "--cov=embedm",
    "--cov=embedm_plugins",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=json",
]

[tool.coverage.run]
source = ["embedm"]
omit = [
    "*/tests/*", 
    "*/test_*.py", 
    "src/embedm/__main__.py", 
    "src/embedm/application/console.py",
    "src/embedm/application/orchestration.py"
 ]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


# -------------------
# IMPORT LINTER
# -------------------
[tool.importlinter]
root_packages = ["embedm", "embedm_plugins"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Domain must not import from infrastructure, cli, or application"
type = "forbidden"
source_modules = ["embedm.domain"]
forbidden_modules = ["embedm.infrastructure", "embedm.application"]

[[tool.importlinter.contracts]]
name = "Parsing must not import from infrastructure or application"
type = "forbidden"
source_modules = ["embedm.parsing"]
forbidden_modules = ["embedm.infrastructure", "embedm.application"]

[[tool.importlinter.contracts]]
name = "Plugins must not import from application"
type = "forbidden"
source_modules = ["embedm.plugins"]
forbidden_modules = ["embedm.application"]

[[tool.importlinter.contracts]]
name = "Infrastructure must not import from application, parsing, or plugins"
type = "forbidden"
source_modules = ["embedm.infrastructure"]
forbidden_modules = ["embedm.application", "embedm.parsing", "embedm.plugins"]

[[tool.importlinter.contracts]]
name = "Embedm plugins must not import from application"
type = "forbidden"
source_modules = ["embedm_plugins"]
forbidden_modules = ["embedm.application" ]

# -------------------
# VULTURE
# -------------------
[tool.vulture]
paths = ["src/"]
min_confidence = 80
exclude = ["__pycache__"]

# -------------------
# RADON / XENON
# -------------------
# Xenon thresholds (run via CLI):
#   xenon src/ --max-absolute B --max-modules A --max-average A

# -------------------
# RUFF
# -------------------
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",
    "I",   # import sorting
    "B",   # bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "ARG", # unused args
    "SIM", # simplifications
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------
# MYPY
# -------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
exclude = ["tests/"]
